# automated-changelog

./: .env.example  .envrc  CLAUDE.md  Makefile  README.md  TODO_01.md  TODO_02.md  TODO_03.md  pyproject.toml
src/automated_changelog/: cli.py  config.py  git_state.py  llm.py
tests/: test_cli.py  test_config.py  test_git_state.py
